@@ -1,3 +1,8 @@
+2014-05-30  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/servers/recon_script.php: Improve layout of recon scripts
+	lists for ticket #822
+
 2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/reporting/visual_console_builder.editor.js,
